[tool.poetry]
name = "zora"
version = "0.2.0"
description = ""
authors = ["franalgaba <f.algaba@outlook.es>"]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
requests = "^2.27.1"
aiohttp = "^3.8.1"
asyncio = "^3.4.3"
pandas = "^1.4.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.12b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
